# Simple_Shell

./: CMakeLists.txt  cpu.h  interpreter.cpp  interpreter.h  interpretor  kernel  kernel.cpp  kernel.h  memorymanager.cpp  memorymanager.h  p  pcb.h  ram.cpp  ram.h  shell  shell.cpp  shell.h  shellmemory  shellmemory.h  test.txt  valgrind.rpt
include/: cpu.h  interpreter.h  kernel.h  ram.h
